# cbf_3D_smooth

cbf_duality/cbf_controllers/: cbf_controllers_plugins.xml
cbf_duality/cbf_controllers/config/: Test_world.world  Test_world_1.world  Test_world_2.world  Test_world_3.world  default.yaml  empty_world.world  reference.info  rviz.rviz  rviz_3d.rviz  task.info
cbf_duality/cbf_controllers/launch/: load_dcbf_controller.launch
cbf_duality/cbf_controllers/src/: CbfControllers.cpp
cbf_duality/cbf_controllers/test/: Visualize3d.launch  dcbf_robot.launch  goal_sender.launch  obstacle_simple.launch  obstacle_test3d.launch  test_cbfduality_3d.launch  test_duality_3d.launch  test_simple_dcbf.launch  visualiser.cpp
cbf_duality/cbf_geometry/: CMakeLists.txt  Question.md  package.xml
cbf_duality/cbf_geometry/include/cbf_geometry/: ConvexRegion2d.h  (+3 more)
cbf_duality/cbf_geometry/src/: ConvexRegion3d.cpp  DistanceQp2d.cpp  DistanceQp3d.cpp
cbf_duality/cbf_geometry/test/: ConvexRegion2dTest.cpp  ConvexRegion3dTest.cpp  TEST_Usage.md  test.cpp
cbf_duality/cbf_interface/src/: DCbfLeggedInterface.cpp  FactoryAccessHelper.cpp  ObstacleReceiver.cpp
cbf_duality/cbf_interface/test/: TF_test  TF_test.cpp  test  test.cpp
cbf_duality/cbf_msgs/: CMakeLists.txt
cbf_duality/cbf_msgs/msg/: Distances.msg  Polytopes.msg
cbf_duality/cbf_ros/: CMakeLists.txt  package.xml
cbf_duality/cbf_ros/launch/: cbf_ros.launch  goal_sender.launch  obstacle_test.launch
cbf_duality/cbf_ros/rviz/: rviz.rviz
cbf_duality/cbf_ros/src/: TargetTrajectoriesPublisher.cpp  cbfDummyNode.cpp  cbfMpcNode.cpp
(+12 files in other folders)
